# python_toolbox

./: .gitignore  README.md  create_playlist.py  create_playlist.spec  exiftool_csv.py  exiftool_csv.spec  move_not_starred.py  move_not_starred.spec  pyproject.toml
music/: create_playlist.py
pictures/: exiftool_csv.py  move_not_starred.py
