[build-system]
requires = [
    "setuptools",
]
build-backend = "setuptools.build_meta"

[project]
name = "python_toolbox"
version = "0.1"
description = "My python toolbox"
readme = "README.md"
requires-python = ">=3.0"
keywords = ["Szkoła w Chmurze", "xlsx"]
authors = [
  {name="Bohdan Bobrowski", email="bohdanbobrowski@gmail.com"},
]
maintainers = [
  {name="Bohdan Bobrowski", email="bohdanbobrowski@gmail.com"}
]
dependencies = [
    "pydantic",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.4",
    "mypy>=1.11.2",
]

[project.scripts]
chmura_salami = "chmura.salami:main"
chmura_osoby = "chmura.osoby:main"
chmura_nauczyciele = "chmura.nauczyciele:main"

[tool.setuptools]
packages = ["chmura"]

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "I"]
