[build-system]
requires = [
    "setuptools",
]
build-backend = "setuptools.build_meta"

[project]
name = "python_toolbox"
version = "0.2"
description = "My python toolbox"
readme = "README.md"
requires-python = ">=3.12"
keywords = [""]
authors = [
  {name="Bohdan Bobrowski", email="bohdanbobrowski@gmail.com"},
]
maintainers = [
  {name="Bohdan Bobrowski", email="bohdanbobrowski@gmail.com"}
]
dependencies = [
    "progress>=1.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.4",
    "mypy>=1.11.2",
]

[project.scripts]
create_playlist = "music.create_playlist:main"
exiftool_csv = "pictures.exiftool_csv:main"
move_not_starred = "pictures.move_not_starred:main"

[tool.setuptools]
packages = [
    "music",
    "pictures"
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "I"]
